--- a/package.xml
+++ b/package.xml
@@ -27,6 +27,8 @@
     <depend>ubica_rclcpp_utils</depend>
 
     <test_depend>ament_cmake_gtest</test_depend>
+    <test_depend>ros_testing</test_depend>
+    <test_depend>rosbag2</test_depend>
 
     <member_of_group>rosidl_interface_packages</member_of_group>
 
