--- a/test/config/test_robot_pose_ekf_zero_covariance_params.yaml
+++ b/test/config/test_robot_pose_ekf_zero_covariance_params.yaml
@@ -1,7 +1,8 @@
 robot_pose_ekf:
     ros__parameters:
+        use_sim_time: false
         freq: 30.0
         sensor_timeout: 1.0
         odom_used: true
         imu_used: true
-        vo_used: false
+        vo_used: true
